Add Docker and GraalVM Native Image support